tests/NormalTests/paczka1/small_fuzzy/23620208.err
Error in line 1: ammiIHN5C S222 81,2
Error in line 13: b9KZ A84 344,7
